manifests-failed/vault-operator-v0.3.0.tgz-manifest.yaml
---
# Source: vault-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-vault-operator
  namespace: vault-operator-v0.3.0.tgz
  labels:
    helm.sh/chart: vault-operator-v0.3.0
    app.kubernetes.io/name: vault-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v0.3.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
  # Port used to expose admission webhook apiserver
  - name: api
    port: 443
    targetPort: 8443
  selector:
    app.kubernetes.io/name: vault-operator
    app.kubernetes.io/instance: my-release
---
# Source: vault-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-vault-operator
  namespace: vault-operator-v0.3.0.tgz
  labels:
    helm.sh/chart: vault-operator-v0.3.0
    app.kubernetes.io/name: vault-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v0.3.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vault-operator
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vault-operator
        app.kubernetes.io/instance: my-release
      annotations:
        checksum/apiregistration.yaml: bd5b5c315481402fcb82fc8f41cd59697e3df456f98dbe3a815cd3ca54d81544
    spec:
      serviceAccountName: my-release-vault-operator
      containers:
      - name: operator
        securityContext:
          {}
        image: kubevault/vault-operator:v0.3.0
        imagePullPolicy: IfNotPresent
        args:
        - run
        - --v=3
        - --secure-port=8443
        - --audit-log-path=-
        - --tls-cert-file=/var/serving-cert/tls.crt
        - --tls-private-key-file=/var/serving-cert/tls.key
        - --enable-mutating-webhook=true
        - --enable-validating-webhook=true
        - --bypass-validating-webhook-xray=false
        - --use-kubeapiserver-fqdn-for-aks=true
        - --enable-analytics=true
        - --cluster-name=
        ports:
        - containerPort: 8443
        resources:
          requests:
            cpu: 100m
        volumeMounts:
        - mountPath: /var/serving-cert
          name: serving-cert
      volumes:
      - name: serving-cert
        secret:
          defaultMode: 420
          secretName: my-release-vault-operator-apiserver-cert
      securityContext:
        fsGroup: 65535
      nodeSelector:
        beta.kubernetes.io/arch: amd64
        beta.kubernetes.io/os: linux
---
# Source: vault-operator/templates/mutating-webhook.yaml
# GKE returns Major:"1", Minor:"10+"
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: mutators.kubevault.com
  labels:
    helm.sh/chart: vault-operator-v0.3.0
    app.kubernetes.io/name: vault-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v0.3.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade
    "helm.sh/hook-delete-policy": before-hook-creation
webhooks:
- name: vaultpolicybindings.mutators.kubevault.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/mutators.kubevault.com/v1alpha1/vaultpolicybindingmutators
    caBundle: bm90LWNhLWNlcnQ=
  rules:
  - operations:
    - CREATE
    - UPDATE
    apiGroups:
    - policy.kubevault.com
    apiVersions:
    - "*"
    resources:
    - vaultpolicybindings
  failurePolicy: Fail
  sideEffects: None
- name: vaultservers.mutators.kubevault.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/mutators.kubevault.com/v1alpha1/vaultservermutators
    caBundle: bm90LWNhLWNlcnQ=
  rules:
  - operations:
    - CREATE
    - UPDATE
    apiGroups:
    - kubevault.com
    apiVersions:
    - "*"
    resources:
    - vaultservers
  failurePolicy: Fail
  sideEffects: None
---
# Source: vault-operator/templates/validating-webhook.yaml
# GKE returns Major:"1", Minor:"10+"
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: validators.kubevault.com
  labels:
    helm.sh/chart: vault-operator-v0.3.0
    app.kubernetes.io/name: vault-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v0.3.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade
    "helm.sh/hook-delete-policy": before-hook-creation
webhooks:
- name: vaultservers.validators.kubevault.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/validators.kubevault.com/v1alpha1/vaultservervalidators
    caBundle: bm90LWNhLWNlcnQ=
  rules:
  - operations:
    - CREATE
    - UPDATE
    apiGroups:
    - kubevault.com
    apiVersions:
    - "*"
    resources:
    - vaultservers
  failurePolicy: Fail
  sideEffects: None
---
# Source: vault-operator/templates/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: validators.engine.kubevault.com
  labels:
    helm.sh/chart: vault-operator-v0.3.0
    app.kubernetes.io/name: vault-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v0.3.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade
    "helm.sh/hook-delete-policy": before-hook-creation
webhooks:
- name: databaseaccessrequests.validators.engine.kubevault.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/validators.engine.kubevault.com/v1alpha1/databaseaccessrequestvalidators
    caBundle: bm90LWNhLWNlcnQ=
  rules:
  - operations:
      - CREATE
      - UPDATE
    apiGroups:
      - engine.kubevault.com
    apiVersions:
      - "*"
    resources:
      - databaseaccessrequests
  failurePolicy: Fail
  sideEffects: None
- name: awsaccesskeyrequests.validators.engine.kubevault.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/validators.engine.kubevault.com/v1alpha1/awsaccesskeyrequestvalidators
    caBundle: bm90LWNhLWNlcnQ=
  rules:
  - operations:
    - CREATE
    - UPDATE
    apiGroups:
    - engine.kubevault.com
    apiVersions:
    - "*"
    resources:
    - awsaccesskeyrequests
  failurePolicy: Fail
  sideEffects: None
- name: gcpaccesskeyrequests.validators.engine.kubevault.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/validators.engine.kubevault.com/v1alpha1/gcpaccesskeyrequestvalidators
    caBundle: bm90LWNhLWNlcnQ=
  rules:
  - operations:
    - CREATE
    - UPDATE
    apiGroups:
    - engine.kubevault.com
    apiVersions:
    - "*"
    resources:
    - gcpaccesskeyrequests
  failurePolicy: Fail
  sideEffects: None
- name: azureaccesskeyrequests.validators.engine.kubevault.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/validators.engine.kubevault.com/v1alpha1/azureaccesskeyrequestvalidators
    caBundle: bm90LWNhLWNlcnQ=
  rules:
  - operations:
    - CREATE
    - UPDATE
    apiGroups:
    - engine.kubevault.com
    apiVersions:
    - "*"
    resources:
    - azureaccesskeyrequests
  failurePolicy: Fail
  sideEffects: None
